feat: address sonar warnings